--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Index</title>
-	<link rel="stylesheet" type="text/css" href="Css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
     </header>
 
     <div class="fondblanc">
-        <img src="Images/demmove-logo-200.png" alt="logo demmove" class="logo">
+        <img src="demmove-logo-200.png" alt="logo demmove" class="logo">
         <div class="textlogo">
             <p id="GrasVert">Déménagement</p>
             <p id="Normal">International et national</p>
